@@ -4,6 +4,10 @@ Changelog
 1.0b5 (unreleased)
 ------------------
 
+* Make IDiscussionLayer inherit from Interface again. Remove IDefaultPloneLayer,
+  since Plone 4.0b1 and plone.theme 2.0b1 are out now.
+  [timo]
+
 * Clean up Javascript code.
   [timo]
 
